--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: rdiscount
 
 # website root path
-base_path: http://www.lnkfile.com
+base_path: http://hankcao.github.io
 # base_path: http://localhost
 # base_path: http://localhost:4000
 
